myself] res free# JVEMV6 44#2.2 4 / 44. currency / 2. research / 2. patterns / 20180920
steps=~3
---
g c -a

source csv file ---> add textarea in the page

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -20,4 +20,24 @@ BUSL_2
 
 <hr>
 
+    <div
+        id="curr_BUSL_2__Area_Files_Folders"
+        
+        >
+        
+        <!-- ref for attribute https://www.w3schools.com/tags/tag_label.asp -->
+        <label class="lbl_basic_1" for="curr_BUSL_2__TA__Fname_CSV">
+                CSV raw data file</label><br>
+                
+        <textarea id="curr_BUSL_2__TA__Fname_CSV">{{ fname_CSV }} </textarea>
+        <br>
+        
+        <label class="lbl_basic_1" for="curr_BUSL_2__TA__Dpath_CSV">
+                CSV raw data dir</label><br>
+        <textarea id="curr_BUSL_2__TA__Dpath_CSV">{{ dpath_CSV }} </textarea>
+        
+        </div>
+
+<hr>
+
 {% include 'curr/partials/busl_3/_idx_tbl.html' %}
