myself] res free# JVEMV6 44#2.2 4 / 44. currency / 2. research / 2. patterns / 20180922
steps=~2
---
g c -a

"up-up above BB.+1S ---> then up or down?"

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -26,15 +26,24 @@ BUSL_2
         >
         
         <!-- ref for attribute https://www.w3schools.com/tags/tag_label.asp -->
-        <label class="lbl_basic_1" for="curr_BUSL_2__TA__Fname_CSV">
+        <label 
+                class="lbl_basic_1" 
+                for="curr_BUSL_2__TA__Fname_CSV"
+            >
                 CSV raw data file</label><br>
                 
-        <textarea id="curr_BUSL_2__TA__Fname_CSV">{{ fname_CSV }}</textarea>
+        <textarea 
+            id="curr_BUSL_2__TA__Fname_CSV"
+            onmouseover="this.select()"
+            >{{ fname_CSV }}</textarea>
         <br>
         
         <label class="lbl_basic_1" for="curr_BUSL_2__TA__Dpath_CSV">
                 CSV raw data dir</label><br>
-        <textarea id="curr_BUSL_2__TA__Dpath_CSV">{{ dpath_CSV }}</textarea>
+        <textarea 
+            id="curr_BUSL_2__TA__Dpath_CSV"
+            onmouseover="this.select()" 
+            >{{ dpath_CSV }}</textarea>
         
         </div>
 
