myself] res free# JVEMV6 44#2.2 5 / 44. currency / 2. research / 2. patterns / 20180923
steps=~2
---
g c -a

get ==> weekday

週ごとに、lo_BarDatas をファイルへ切り出す、new func

        ==> going

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -19,7 +19,12 @@ BUSL_2
     </div>
 
 <hr>
-
+    
+    <button onclick="show_hide_Tag('div#curr_BUSL_2__Area_Files_Folders');">
+            Show / Hide
+          </button>
+    
+    
     <div
         id="curr_BUSL_2__Area_Files_Folders"
         
