--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_idx_tbl.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_idx_tbl.html
@@ -40,7 +40,8 @@
 
 </table>
 
-<table id="tbl_Im_Actions__Body">
+<!-- <table id="tbl_Im_Actions__Body"> -->
+<table id="tbl_Curr_BUSL_2_Actions__Body">
 
         {% for item in list_of_params %}
         
