myself] res free# JVEMV6 44#2.2 9 / 44. currency / 2. research / 2. patterns / 20180927
steps=~4
---
g c -a

analysis

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -24,6 +24,10 @@ BUSL_2
             Show / Hide
           </button>
     
+    <button onclick="open_DataDir();">
+            Open dirs
+          </button>
+    
     
     <div
         id="curr_BUSL_2__Area_Files_Folders"
