myself] res free# JVEMV6 44#2.2 10 / 44. currency / 2. research / 2. patterns / 20180928
steps=~5
---
g c -a

"diff of bars ---> average, std dev --> of up bars, down bars"
pips計算

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -55,6 +55,8 @@ BUSL_2
             >{{ dpath_CSV }}</textarea>
         
         </div>
+    
+    {% include 'curr/partials/busl_3/_busl_2.tbl_options.html' %}
 
 <hr>
 
