myself] res free# JVEMV6 44#2.2 11-2 / 44. currency / 2. research / 2. patterns / 20180929
steps=~3
---
g c -a

NEW FUNC : libfx :: Stat_UpAboveBB1S_Then_UpDown_Prev3Bars

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -54,10 +54,10 @@ BUSL_2
             onmouseover="this.select()" 
             >{{ dpath_CSV }}</textarea>
         
-        </div>
+	    {% include 'curr/partials/busl_3/_busl_2.tbl_options.html' %}
+	
+        </div><!-- id="curr_BUSL_2__Area_Files_Folders" -->
     
-    {% include 'curr/partials/busl_3/_busl_2.tbl_options.html' %}
-
 <hr>
 
 {% include 'curr/partials/busl_3/_idx_tbl.html' %}
