myself] res free# JVEMV6 44#2.2 13 / 44. currency / 2. research / 2. patterns / 20181001
steps=~3
---
g c -a

libfx :: _BUSL_3__DetectPatterns__Highs_Lows__V_4__exec
    skeleton : for-loop

        ==> done

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_busl_2.tbl_options.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_busl_2.tbl_options.html
@@ -1,8 +1,40 @@
+<!-- C:\WORKS_2\WS\WS_Others.prog\prog\D-7\2_2\VIRTUAL\Admin_Projects\curr\templates\curr\partials\busl_3\_busl_2.tbl_options.html -->
 <div
-    id="id="curr_BUSL_2__Area_Options"
+    id="curr_BUSL_2__Area_Options"
     >
     
     <table>
+        <tr>
+            <td>
+             2-2
+     
+          </td>
+          
+          <td>
+             <input 
+                 type="radio" 
+                 name="curr_BUSL_2__Area_Options__RB_2-2_RBs" 
+                 id="curr_BUSL_2__Area_Options__RB_2-2_ByMonth" 
+                 value="by_month"
+                 checked="checked" 
+                 />
+             <label for="curr_BUSL_2__Area_Options__RB_2-2_ByMonth">
+                     by month
+                     </label>
+                     
+             <input 
+                 type="radio" 
+                 name="curr_BUSL_2__Area_Options__RB_2-2_RBs" 
+                 id="curr_BUSL_2__Area_Options__RB_2-2_AllMonths" 
+                 value="all_months" 
+                 />
+             <label for="curr_BUSL_2__Area_Options__RB_2-2_AllMonths">
+                     all months
+                     </label>
+         
+          </td>
+        </tr>	        
+        
         <tr>
             <td>
              3-2
