--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_idx_tbl.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/partials/busl_3/_idx_tbl.html
@@ -1,5 +1,6 @@
 {% load taglib_basic %}
 
+
 <table id="tbl_Im_Actions__Header">
 
         <tr>
@@ -55,13 +56,29 @@
 	                    {{forloop.counter}}
 	                
 	                </td>
+	                <!-- ref color names https://html-color-codes.info/color-names/ -->
+	                <td style="background-color : 
+	                   
+	                       {% if item.0 >= "1" and item.0 < "2-"   %} 
+	                           DarkKhaki
+	                       {% elif item.0 >= "2-" and item.0 < "3-"   %} 
+	                           yellow 
+	                       {% elif item.0 >= "3-" and item.0 < "4-"   %}
+	                           Thistle
+                           {% else %}
+                               gray
+                           {% endif %}"
 	                
-	                <td>
+	                   >
 	                
 	                    {{ item.0 }}
+	                    <!-- ref https://docs.djangoproject.com/en/2.1/ref/templates/builtins/ -->
+	                    <!-- {% if item.0 >= "2-" and item.0 < "3-"   %} YES, 2- {% else %} NOOOO {% endif %} -->
+	                    <!-- {% if item.0 == "2-1"   %} YES, 1 {% else %} NO {% endif %} -->
 	                    
 	                </td>
 	                
+	                <!-- <td id="td_Label_{{ item.0 }}" style="background-color: yellow;"> -->
 	                <td id="td_Label_{{ item.0 }}">
 	                
 	                    {{ item.1 }}
