myself] res free# JVEMV6 44#5.1 8 / 44. currency / 5. ea tools / STEPS
steps=~
---
g c -a

new FUNC : views :: _tester_BUSL__V2__Param_1_2__CONSEQUTIVE_UPS_DOWNS(request)

	==> started

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/plain_research_result.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/plain_research_result.html
@@ -1,7 +1,15 @@
 plain
 
+<!-- ref https://stackoverflow.com/questions/11306669/django-template-escaping#11306935 -->
+<!-- ref https://code.djangoproject.com/wiki/AutoEscaping -->
+<!-- ref https://duckduckgo.com/?q=django+template+not+escape+html&atb=v84-1__&ia=qa -->
+
+{% autoescape off %}
+
 <br>
     {{ message }}
 <br>
 
     {{ message_2 }}
+
+{% endautoescape %}
