myself] res free# JVEMV6 44#5.1 34 / 44. currency / 5. ea tools / 1. first / 20190111
steps=~
------------
g c -a

# TASK-1 : no.3
	==> review done

&_ TASK-2 : no-"9 "日ごとに、lo_BarDatas をファイルへ切り出す
	==> started

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/curr/templates/curr/busl_2.html
@@ -1,5 +1,7 @@
 {% load taglib_curr %}
 
+
+
 BUSL_2
 <br>
 {{ message }}
@@ -73,4 +75,7 @@ BUSL_2
     
 <hr>
 
-{% include 'curr/partials/busl_3/_idx_tbl.html' %}
+<!-- ref https://code.djangoproject.com/wiki/AutoEscaping -->
+{% autoescape off %}
+	{% include 'curr/partials/busl_3/_idx_tbl.html' %}
+{% endautoescape %}
