myself] res free# JVEMV6 44#8.2 4 / 44. currency / 8. prog-python / 2. basic stats, cat-2 / 20190219
steps=~
------------
g c -a

TASK-1    "def _BUSL3_Tester_No_44_1__Stats_Ups_Downs_In_BB_Areas__exec__V_1_0__prep"
        ==> return values : add : "flg_SubData = True"

		==> started

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/static/mm/css/main.css
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/static/mm/css/main.css
@@ -15,6 +15,31 @@ p.current_Scheme {
 	
 }
 
+/* table : default */
+table {
+	
+	/*border     : 1;*/
+	/*border     : 1px solid black;*/
+	/* ref template for css files https://stackoverflow.com/questions/7900575/how-to-add-css-autocomplete-to-eclipse */
+	/*ref table border http://www.html.am/html-codes/tables/table-border.cfm*/
+	border     : 1px solid #aaaaaa;
+	
+	margin     : 10px;
+}
+
+/* td : default */
+/*td {*/
+table tr td {
+	
+	/*background-color   : #ffffff;*/
+	
+	/*text-align     : left;*/
+	
+	border     : 1px solid #aaaaaa;
+	
+	/*padding    : 5px;*/
+	
+}
 
 table#tbl_Im_Actions {
 	
