res VX7GLZ /  28#3CVF_10 / 28. physics / spinors / 20190702_083334
cake ==> mm
------------------------
TASK-2 : mm file dir ---> turn to : changeable

	==> comp

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/static/mm/css/main.css
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/static/mm/css/main.css
@@ -829,6 +829,23 @@ input#ipt_Numbering_MainDir {
 	
 }/*input#ipt_Numbering_MainDir {*/
 
+input#ipt_Idx_Numbering_MainDir {
+	
+	height: 30px;
+    width:  350px;
+    /*width:  250px;*/
+
+    background: #81BEF7;
+    
+    margin-top: 10px;
+    
+    margin-left : 20px;
+    
+    padding     : 5px;
+	
+	
+}/*input#ipt_Idx_Numbering_MainDir {*/
+
 input#ipt_Curr_Tester_BUSL_DpathImages {
 	
 	height: 30px;
