--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/templates/mm/index.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/templates/mm/index.html
@@ -7,6 +7,14 @@
     {% include 'mm/partials/index_table_dropdown.html' %}
 
     <hr>
+	    <div>
+		
+		    <input value="{{ mainDir_MM_File }}" id="ipt_Idx_Numbering_MainDir"/>
+		    
+		
+		</div>
+    
+    <hr>
     
     <div id="index_Display_Area">
     
@@ -22,6 +30,7 @@
     
     
     </div>
+    
     
 {% endblock %}
     
