--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/templates/mm/partials/numbering_content.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/mm/templates/mm/partials/numbering_content.html
@@ -7,8 +7,9 @@
 	</div>
 	
 	<div>
-	
-	    <input value="{{ MAIN_DIR }}" id="ipt_Numbering_MainDir"/>
+		
+		<!-- #_20190702_094159:tmp -->
+	    <input value="{{ dpath_MainDir_MM_Files }}" id="ipt_Numbering_MainDir"/>
 	    
 	
 	</div>
