(WS_Others.prog) periodical updates

--- a/prog/D-7/2_2/VIRTUAL/Admin_Projects/im/templates/im/partials/index_table.html
+++ b/prog/D-7/2_2/VIRTUAL/Admin_Projects/im/templates/im/partials/index_table.html
@@ -68,7 +68,7 @@
 	            </td>
 	            
 	            <td>
-	            
+	            	<!-- 20200108_104300:tmp -->
 	                <button 
 	                       onclick="im_Action('{{ item.0 }}')"
 	                       class="bt_Basic_2_Size20"
